# xatra-maps

./: .gitignore  admin_india_2.py  admin_india_3.py  admin_rivers.py  akhand.py  colonies_sea.py  gdp_visualization.py  hsr.py  nations_india.py  nations_indosphere.py  nations_silkroad_maritime.py  nations_silkroad_overland.py  pyproject.toml  rivers_gangetic.py  rivers_peninsular.py  rivers_saptasindhu.py  rivers_silkrd.py  sea.py  sea_suvarnabhumi.py  state_ratios_plot.py
docs/: README.md  hsr.html  nw_panini.html
maps/: base_options.py
maps/admin/: admin_india_2.py  admin_india_3.py  admin_rivers.py
maps/audicya/: panini.py
maps/globe/: akhand.py  sea.py  sea_suvarnabhumi.py
maps/modern/: gdp_visualization.py  hsr.py  state_ratios_plot.py
maps/nations/: nations_india.py  nations_indosphere.py  nations_silkroad_maritime.py  nations_silkroad_overland.py
maps/rivers/: rivers_gangetic.py  rivers_peninsular.py  rivers_saptasindhu.py  rivers_silkrd.py
